--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fatren Shop [لوحة التحكم]</title>
+<link rel="apple-touch-icon" href="https://archive.org/download/514318937-17843527140525669-3229402491492111273-n/514318937_17843527140525669_3229402491492111273_n.jpg">
 <link rel="icon" href="https://archive.org/download/514318937-17843527140525669-3229402491492111273-n/514318937_17843527140525669_3229402491492111273_n.jpg" type="image/jpeg">
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
